...
                                                    <rect key="frame" x="20" y="140" width="309" height="90"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EsB-oe-L
                                                    <rect key="frame" x="20" y="95" width="309" height="47"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w8Z-9i-YUa">
                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
                                <color key="backgroundColor" red="0.3595387017380498" green="0.80321881239131276" blue="1" alpha="0.47934088908450706" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="a6I-iO-y2I"/>
                                </constraints>
                                <state key="normal" title="Add content"/>
                                <connections>
                                    <segue destination="gYm-Qw-gHL" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="C7f-z7-a1u"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MkN-Z4-6nu">
                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
                                <color key="backgroundColor" red="0.35953870170000002" green="0.80321881240000004" blue="1" alpha="0.4793408891" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="4oZ-rz-3bq"/>
                                </constraints>
                                <state key="normal" title="Back"/>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="hjR-Dj-Y72"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UNiDAYS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N8u-JL-WfF">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
...
                            </textView>
                            <button opaque="NO" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4J3-Sx-d1G">
                                <rect key="frame" x="33" y="299" width="310" height="72"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="72" id="0hK-pd-qXb"/>
                                </constraints>
                                <state key="normal" title="Upload" backgroundImage="upload">
                                    <color key="titleColor" red="0.88598339640000001" green="0.88598339640000001" blue="0.88598339640000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="uploadData:" destination="gYm-Qw-gHL" eventType="touchUpInside" id="djI-JA-CML"/>
                                </connections>
                            </button>
...
