//
//  cardLayoutUITests.swift
//  cardLayoutUITests
//
//  Created by Anan K. Mallik on 18/08/20.
//  Copyright © 2020 Anan K. Mallik. All rights reserved.
//

import XCTest

class cardLayoutUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests
        let app = XCUIApplication()
        app.buttons["Add content"].tap()
        app.textFields["Title"].tap()
        
        let textView = app.children(matching: .window).element(boundBy: 0).children(matching: .other).element.children(matching: .other).element.children(matching: .textView).element
        textView.tap()
        textView.tap()
        app.buttons["Upload"].tap()
        app.buttons["Back"].tap()
        
    
    }
    
}
